fixed overflow x

--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body {
   background-color: rgb(114, 114, 114);
   color: white;
   min-height: 100vh;
+  overflow-x: hidden;
 }
 
 section {
@@ -243,3 +244,24 @@ display: inline;
     grid-template-columns: repeat(3, 1fr);
   }
 }
+
+
+/* Unrelated */
+.square-icon {
+  width:  15rem;
+  height:  15rem;
+  background: white;
+  border: 2px solid blue;
+  position: relative;
+}
+
+.square-icon::before {
+    content: "";
+    position: absolute;
+    z-index: -1;
+    height: 100%;
+    width: 100%;
+    right: -1rem;
+    bottom: -1rem;
+    background: #FF00E5;
+  }
